fixed line in reviews carousel, chat in admin panel, and some layout bugs

--- a/src/adminPanel/sections/start/start.scss
+++ b/src/adminPanel/sections/start/start.scss
@@ -38,3 +38,58 @@
         }   
     }
 }
+
+@media screen and (max-width: 860px) {
+    .admin {
+        .start {
+            &__top {
+                flex-wrap: nowrap;
+                gap: 20px;
+
+                &-item {
+                    flex-shrink: 0;
+                    width: 170px;
+                    height: 155px;
+                    padding: 15px;
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .admin {
+        .start {
+            &__top {
+                &-item {
+                    width: 135px;
+                    height: 125px;
+                    font-size: 12px;
+
+                    img {
+                        width: 65px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .admin {
+        .start {
+            &__top {
+                &-item {
+                    width: 100px;
+                    height: 100px;
+                    font-size: 8px;
+
+                    img {
+                        width: 40px;
+                    }
+                }
+            }
+        }
+    }
+}
