--- a/src/index.scss
+++ b/src/index.scss
@@ -751,7 +751,7 @@ a {
 
 	.reviews {
 		&__items {
-			padding-top: 40px;
+			padding-top: 10px;
 		}
 	}
 }
