--- a/src/pages/rootPage/rootPage.scss
+++ b/src/pages/rootPage/rootPage.scss
@@ -507,6 +507,7 @@
 
         &__search {
             width: 100%;
+            max-width: none;
         }
 
         .search {
